# clmnc

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STYLE.md  LICENSE  README.md  package-lock.json  package.json
src/: index.ts
src/base/parser/ast/: base.node.ts
src/base/parser/ast/declarations/: decorator.node.ts  function.node.ts  namespace.node.ts  operator.node.ts
src/base/preprocessor/: base.ts
src/base/tokenizer/: base.ts
src/base/tokenizer/tokens/: Token.ts  kinds.ts
src/base/utils/: funcs.ts
test/: helloworld.esp
test/lib/: a.clmn  io.esp
